aplicacion de diseño a la ventana principal

--- a/mainProject/static/css/CreateStyles.css
+++ b/mainProject/static/css/CreateStyles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: linear-gradient(to right, #F497A9, #FADADD, #FFFFFF);
+    background: linear-gradient(to right, #fcdcdc, #fad4cf, #f8caca);
     text-align: center;
 }
 
